docs/0.19/_sources/api/gammapy.irf.PSF3D.rst.txt
PSF3D
=====

.. currentmodule:: gammapy.irf

.. autoclass:: PSF3D
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~PSF3D.axes
      ~PSF3D.data
      ~PSF3D.default_interp_kwargs
      ~PSF3D.is_offset_dependent
      ~PSF3D.is_pointlike
      ~PSF3D.quantity
      ~PSF3D.required_axes
      ~PSF3D.tag
      ~PSF3D.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~PSF3D.containment
      ~PSF3D.containment_radius
      ~PSF3D.cumsum
      ~PSF3D.evaluate
      ~PSF3D.from_hdulist
      ~PSF3D.from_table
      ~PSF3D.info
      ~PSF3D.integral
      ~PSF3D.integrate_log_log
      ~PSF3D.interp_missing_data
      ~PSF3D.normalize
      ~PSF3D.pad
      ~PSF3D.peek
      ~PSF3D.plot_containment_radius
      ~PSF3D.plot_containment_radius_vs_energy
      ~PSF3D.plot_psf_vs_rad
      ~PSF3D.read
      ~PSF3D.to_hdulist
      ~PSF3D.to_table
      ~PSF3D.to_table_hdu
      ~PSF3D.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: axes
   .. autoattribute:: data
   .. autoattribute:: default_interp_kwargs
   .. autoattribute:: is_offset_dependent
   .. autoattribute:: is_pointlike
   .. autoattribute:: quantity
   .. autoattribute:: required_axes
   .. autoattribute:: tag
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: containment
   .. automethod:: containment_radius
   .. automethod:: cumsum
   .. automethod:: evaluate
   .. automethod:: from_hdulist
   .. automethod:: from_table
   .. automethod:: info
   .. automethod:: integral
   .. automethod:: integrate_log_log
   .. automethod:: interp_missing_data
   .. automethod:: normalize
   .. automethod:: pad
   .. automethod:: peek
   .. automethod:: plot_containment_radius
   .. automethod:: plot_containment_radius_vs_energy
   .. automethod:: plot_psf_vs_rad
   .. automethod:: read
   .. automethod:: to_hdulist
   .. automethod:: to_table
   .. automethod:: to_table_hdu
   .. automethod:: write
